--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "lucide-react": "^0.563.0",
     "next": "14.1.0",
+    "next-cloudinary": "^6.17.5",
     "postcss": "^8.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
